--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,9 @@ include:            [ "robots.txt" ]
 exclude:            [ "LICENSE", "README.md", "CNAME", "vendor", "Gemfile", "script" ]
 plugins:
   - jekyll-sitemap
+  - jekyll-remote-theme
 
-
+remote_theme: heiswayi/the-plain
 
 defaults:
   -
